[gd_scene load_steps=4 format=3 uid="uid://cpapq2rgal0bo"]

[ext_resource type="Script" path="res://Scripts/Allys/Heroes/fuchen_ray_move_point.gd" id="1_ci2rm"]
[ext_resource type="Texture2D" uid="uid://6mjftwxikkug" path="res://icon.svg" id="2_4svb6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iffhw"]
radius = 52.0096

[node name="FuchenRayMovePoint" type="PathFollow2D"]
script = ExtResource("1_ci2rm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_iffhw")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_4svb6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
